--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <div class="footer-info">
       <h4>Contato</h4>
-      <p><strong>Endereço:</strong> Rua das Flores, 123 – Centro, Cidade-SP</p>
+      <p><strong>Endereço:</strong> Rua rio de janeiro, 530 – Centro, Macatuba-SP</p>
       <p><strong>Telefone:</strong> 14 9 9714-2913</p>
       <p><strong>E-mail:</strong> contato@spaurbano.com.br</p>
     </div>
