--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="service-grid">
 
       <div class="service-card">
-        <img src="spaday.jpg" alt="Day Spa">
+        <img src="spaDay.jpg" alt="Day Spa">
         <div class="service-card-content">
           <h3>Day Spa</h3>
           <p>Day spa relaxante e revigorante para renovar corpo e mente.</p>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="service-card">
-        <img src="terapiasfaciais.jpg" alt="Terapias Faciais">
+        <img src="terapiasFaciais.jpg" alt="Terapias Faciais">
         <div class="service-card-content">
           <h3>Terapias Faciais</h3>
           <p>Massagem facial, drenagem linfática, esfoliação, hidratação e mais.</p>
